Support for sending with multiple outputs